<resources>
    <string name="app_name">Ex machina (2015)</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="imdb">IMDB</string>
    <string name="run_time">Run Time:</string>
    <string name="revenue">Revenue:</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="storyline">STORYLINE</string>
    <string name="share">Share</string>
    <string name="buy">Buy</string>
</resources>
