<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="411dp"
        android:layout_height="300dp"
        android:scaleX="2"
        android:scaleY="2"
        android:scrollY="-74dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@+id/play_button_frame"
        app:layout_constraintLeft_toLeftOf="@+id/play_button_frame" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:textAppearance="@style/TextLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:isIndicator="false"
        android:numStars="9"
        android:rating="4"
        android:stepSize="0.5"
        android:theme="@style/RatingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <TextView
        android:id="@+id/text_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextCaptionGrey"
        app:layout_constraintLeft_toRightOf="@+id/rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <TextView
        android:id="@+id/text_imdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/imdb"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
        app:layout_constraintRight_toLeftOf="@+id/text_imdb_rating" />

    <TextView
        android:id="@+id/text_imdb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_text_view"
        android:textAppearance="@style/TextCaptionWhite"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/text_imdb"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_revenu_value"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintLeft_toLeftOf="@+id/text_revenue"
        app:layout_constraintTop_toBottomOf="@+id/text_revenue" />

    <TextView
        android:id="@+id/text_release_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintLeft_toLeftOf="@+id/text_release_date"
        app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

    <TextView
        android:id="@+id/text_run_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/text_run_time"
        app:layout_constraintTop_toBottomOf="@+id/text_run_time"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintBottom_toTopOf="@+id/text_movie_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/text_run_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/run_time"
        android:textAppearance="@style/TextCaptionGrey"
        app:layout_constraintLeft_toRightOf="@+id/text_release_date"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <TextView
        android:id="@+id/text_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/revenue"
        android:textAppearance="@style/TextCaptionGrey"
        app:layout_constraintLeft_toRightOf="@+id/text_run_time"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <TextView
        android:id="@+id/text_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/release_date"
        android:textAppearance="@style/TextCaptionGrey"
        app:layout_constraintLeft_toRightOf="@+id/text_rating"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/rating"
        android:textAppearance="@style/TextCaptionGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <TextView
        android:id="@+id/text_movie_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextBody"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_run_time_value" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_description">

        <LinearLayout
            android:id="@+id/genre_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/storyline"
        android:textAppearance="@style/TextCaptionWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/text_storyline_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextBody"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_storyline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_storyline_value">

        <TextView
            android:id="@+id/text_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_text_view3"
            android:text="@string/share"
            android:textAlignment="center"
            android:textAppearance="@style/TextCaptionWhite"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/text_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_text_view2"
            android:text="@string/buy"
            android:textAlignment="center"
            android:textAppearance="@style/TextCaptionWhite" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/play_button_frame"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="128dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:cropToPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/play_circle_shape"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_shape"
            />

        <ImageView
            android:id="@+id/image_play_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/play_button" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>